# hfractal

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/image/: histogram.rs  mod.rs  naive.rs  oversample.rs  parallel.rs
src/math/: color.rs  mod.rs  number.rs  window.rs
